tests/gen-test/test_out/recursive-fib-parse-out.txt
error: expected '{' | '=>' but got Int
 --> recursive-fib\root.ctl:1:89
  |
1 | #[entry] ; fn main -> uint => fib(10) - 55 ; fn fib(x : uint) -> uint => match x { 0 => 0 ; 1 => 1 ; a => fib(a - 1) + fib(a - 2) ; } ;
  |                                                                                         ^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr -> match expr -> list -> match arm -> if block

error: expected '{' | '=>' but got Int
 --> recursive-fib\root.ctl:1:98
  |
1 | #[entry] ; fn main -> uint => fib(10) - 55 ; fn fib(x : uint) -> uint => match x { 0 => 0 ; 1 => 1 ; a => fib(a - 1) + fib(a - 2) ; } ;
  |                                                                                                  ^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr -> match expr -> list -> match arm -> if block

error: expected '{' | '=>' but got Ident
 --> recursive-fib\root.ctl:1:107
  |
1 | #[entry] ; fn main -> uint => fib(10) - 55 ; fn fib(x : uint) -> uint => match x { 0 => 0 ; 1 => 1 ; a => fib(a - 1) + fib(a - 2) ; } ;
  |                                                                                                           ^^^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr -> match expr -> list -> match arm -> if block

